 $Id: ChangeLog,v 1.131.2.25.2.110 2010/10/07 13:21:21 uehira Exp $

2010-10-07  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/select_bylatlon.c : ANSI C
	* src/select_stations.c : ANSI C

2010-10-04  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/recvt.c : fixed bugs in check_pno().
	                ht[].pnos[] : unsigned int --> int
	* src/relay.c : partial backout check_pno().
	* src/relaym.c : 64bit clean.
	* src/winlib.c : check_ts()
	* configure.in : use statvfs() in case of __SVR4 (SunOS)
	* src/recvt_LS7000.c : 64bit clean?

2010-10-02  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* configure.in : force #include <sys/param.h> at the time of
  	                 <sys/mount.h> existance check.

2010-09-30  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/recvstatus.c : 64bit check.
	* src/recvstatus2.c : added daemon mode. 64bit check.
	* src/recvstatus3.c : 64bit check.
	* src/recvstatus4.c : 64bit check.
	* src/relay.c : 64bit clean?
	* src/winlib.c : dir_check()
	* src/udp_accept.c : udp_accept4()
	* src/udp_dest.c : udp_dest4()
	* Version 2.1.9 released.

2010-09-29  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/winlib_log.c : Shm_read(), Shm_create()
	* src/winlib.c : Shm_read_offline(), Shm_create_offline()

2010-09-27  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* configure.in : check struct statfs.f_bavail size.
	    dirent.h : check include file, and defined DIRNAMLEN macro.
	    update checking methods : socklen_t, struct tm.tm_gmtoff
	* src/events.c : 64 bit clean?
	* src/wdisk.c : check __SVR4 and __NetBSD__.
	* update autotools
	  autoconf-2.67
	  automake-1.10
	  libtool-2.2.10
	* Version 2.1.8 released.

2010-09-21  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/pmon.c : 64 bit clean?
	* src/evdetect.c : 64 bit clean?
	* src/ras2util.c : join 'ras2lips.c' and 'ras2rpdl.c'. 64bit check.

2010-09-20  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/extraw.c : 64 bit clean.
	* src/send_raw_old.c : 64 bit clean?